# amber

./: .gitignore  AMBER-ECC.md  AMBER-FORMAT.md  Cargo.toml  LICENSE  README.md  __init__.py  amber_beta_smoke.sh  append.py  chunkemit.py  cli.py  comparison.md  corrupt.py  crc32c.py  errors.py  gf256.py  harden.py  hashutil.py  pathutil.py  rebuild.py  records.py  requirements.txt  rx.py  setup.py  test_anchors.py  test_cli_workflows.py  writer.py
amber/: __init__.py  append.py  chunkemit.py  cli.py  codec.py  constants.py  ecc.py  encryption.py  entryutil.py  harden.py  prng.py  reader.py  rebuild.py  recover.py  rx.py  superblock.py  tlv.py  trailer.py  writer.py  xchacha.py
docs/: AMBER-DAMAGE-MODEL.md  AMBER-ECC-DESIGN.md  AMBER-ECC.md  AMBER-FORMAT.md  AMBER-RECOVERY-SPEC.md
scripts/: corrupt.py  smoke_rx.py
src/: amcfadaptive.rs  amcfcompute.rs  amcfspatial.rs  append.rs  archiveio.rs  cauchy_rs.rs  cauchy_rs_compute.rs  chunkemit.rs  cli.rs  codec.rs  constants.rs  coprime.rs  corrupt.rs  crc32c.rs  ecc.rs  encryption.rs  entryutil.rs  error.rs  gf256.rs  gf65536.rs  globalparity.rs  harden.rs  hashutil.rs  inputscan.rs  lib.rs  mds.rs  mdscompute.rs  mutation.rs  pathutil.rs  reader.rs  rebuild.rs  records.rs  recover.rs  repair.rs  superblock.rs  tlv.rs  trailer.rs  writer.rs
src/tests/: amcfadaptive.rs  archiveio.rs  bin_amber.rs  cli.rs  codec.rs  corrupt.rs  crc32c.rs  encryption.rs  harden.rs  mutation.rs  pathutil.rs  reader.rs  records.rs  recover.rs  repair.rs  superblock.rs  tlv.rs  trailer.rs  writer.rs
tests/: test_rx.py  test_store.py
(+2 files in other folders)
