[package]
name = "amber"
version = "0.1.0"
edition = "2024"

[lib]
name = "amber"
path = "src/lib.rs"

[dependencies]
argon2 = "*"
blake3 = "*"
chacha20poly1305 = { version = "*", features = ["std"] }
clap = { version = "*", features = ["derive"] }
flate2 = "*"
filetime = "*"
getrandom = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
tempfile = "*"
zstd = "*"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "*", features = ["Win32_Foundation", "Win32_Storage_FileSystem"] }
